Opened 6 years ago
Closed 6 years ago
#7679 closed defect (fixed)
MP4 DASH: error reading header
Reported by: | cgbug | Owned by: | |
---|---|---|---|
Priority: | normal | Component: | avformat |
Version: | git-master | Keywords: | mov |
Cc: | Blocked By: | ||
Blocking: | Reproduced by developer: | yes | |
Analyzed by developer: | no |
Description
ffmpeg version N-92963-g1ea5529dd2 Copyright (c) 2000-2019 the FFmpeg developers built with gcc 8.2.1 (GCC) 20181201 configuration: --enable-gpl --enable-version3 --enable-sdl2 --enable-fontconfig --enable-gnutls --enable-iconv --enable-libass --enable-libbluray --enable-libfreetype --enable-libmp3lame --enable-libopencore-amrnb --enable-libopencore-amrwb --enable-libopenjpeg --enable-libopus --enable-libshine --enable-libsnappy --enable-libsoxr --enable-libtheora --enable-libtwolame --enable-libvpx --enable-libwavpack --enable-libwebp --enable-libx264 --enable-libx265 --enable-libxml2 --enable-libzimg --enable-lzma --enable-zlib --enable-gmp --enable-libvidstab --enable-libvorbis --enable-libvo-amrwbenc --enable-libmysofa --enable-libspeex --enable-libxvid --enable-libaom --enable-libmfx --enable-amf --enable-ffnvcodec --enable-cuvid --enable-d3d11va --enable-nvenc --enable-nvdec --enable-dxva2 --enable-avisynth --enable-libopenmpt libavutil 56. 25.100 / 56. 25.100 libavcodec 58. 43.101 / 58. 43.101 libavformat 58. 25.100 / 58. 25.100 libavdevice 58. 6.101 / 58. 6.101 libavfilter 7. 48.100 / 7. 48.100 libswscale 5. 4.100 / 5. 4.100 libswresample 3. 4.100 / 3. 4.100 libpostproc 55. 4.100 / 55. 4.100 [mov,mp4,m4a,3gp,3g2,mj2 @ 00000000003d2680] could not find corresponding track id 1 [mov,mp4,m4a,3gp,3g2,mj2 @ 00000000003d2680] could not find corresponding trex [mov,mp4,m4a,3gp,3g2,mj2 @ 00000000003d2680] error reading header dash_err.mp4: Invalid data found when processing input
Attachments (1)
Change History (5)
by , 6 years ago
Attachment: | dash_err.mp4 added |
---|
comment:1 by , 6 years ago
comment:3 by , 6 years ago
Keywords: | mov added |
---|---|
Reproduced by developer: | set |
Status: | new → open |
Patch sent.
comment:4 by , 6 years ago
Resolution: | → fixed |
---|---|
Status: | open → closed |
Should be fixed in 5d958f0955fe0e7552e7ccb8fddf9947e90039fc, thank you for the report!
Note:
See TracTickets
for help on using tickets.
Which player / transcoding utility reads the file?